tests/expectations/parser/functions/public_const_param_fail.out
Error [EPAR0370047]: expected parameter name
    --> test:3:31
     |
   3 |     function x(x: u32, public const y: i32) {
     |                               ^^^^^
Error [EPAR0370047]: expected parameter name
    --> test:7:29
     |
   7 |     async function x(public constant x: u32, y: i32) {
     |                             ^^^^^^^^
